--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Fractal Tree</h1>
+			<h1>Money makes Trees</h1>
 		</header>
 			<section id="content">
 				<canvas id="FractalTree" data-processing-sources="FractalTree.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Money makes trees.
+		    
 	    </footer>
 	</body>
 </html>
